samples/_failures_safe/1761005360_484f63_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_254a7135.c: In function ‘main’:
./samples/SAFE/__tmp_254a7135.c:152:12: error: missing terminating " character
  152 |     printf("Enter log entries (format: YYYY-MM-DD HH:MM:SS LEVEL message):
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_254a7135.c:152:5: error: expected expression at end of input
  152 |     printf("Enter log entries (format: YYYY-MM-DD HH:MM:SS LEVEL message):
      |     ^~~~~~
./samples/SAFE/__tmp_254a7135.c:152:5: error: expected declaration or statement at end of input
